# app-componts

./: Cargo.toml  log_generate.md
src/: componts.rs  lib.rs  logs.rs
src/backend/proxy/: ca_cert.rs  debug_stream.rs  http_proxy.rs  mod.rs  prelude.rs  session.rs
src/logs/: event_log.rs  http_proxylogs.rs  logs.rs  logs_struct.rs  mod.rs
ui/: app.slint
ui/componts/: BaseCompont.slint  Home.slint  Log.slint  Setting.slint
ui/config/: global.slint  theme.slint
