[package]
name = "app-componts"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
slint = { workspace = true }
winit = "0.30"
i-slint-backend-winit = "1.8.0"
once_cell = "1.20"
chrono = "0.4"
crossbeam-channel = "0.5"
parking_lot = "0.12.3"
rand = "0.8"
time = { version = "0.3", features = ["macros", "local-offset","formatting"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
encoding_rs = "0.8"
rustls = "0.23"
rustls-pemfile = "2.2"
rcgen = "0.13"
[build-dependencies]
slint-build = "1.8.0"
