[package]
name = "app-componts"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
slint = { workspace = true }
winit = "0.30"
i-slint-backend-winit = "1.8.0"
once_cell = "1.20"
chrono = "0.4"
crossbeam-channel = "0.5"
parking_lot = "0.12.3"
rand = "0.8"
time = { version = "0.3", features = ["macros", "local-offset","formatting"] }
colored = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
encoding_rs = "0.8"
rustls = "0.23"
rustls-pemfile = "2.2"
rcgen = {version = "0.13.2", features = ["pem","x509-parser"]}
anyhow = "1.0"
webpki-roots = "0.26.7"
tokio-rustls = "0.26.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.17"
uuid = {version = "1.11", features = ["v4","fast-rng","macro-diagnostics"]}
rfd = "0.15"

[build-dependencies]
slint-build = "1.8.0"
